--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,13 @@ dependencies:
   # HTTP
   http: ^0.13.5
 
+  # Local Storage
+  shared_preferences: ^2.1.0
+
+  # State Management
+  provider: ^6.0.5
+  dropdown_search: ^5.0.6
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
