--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,11 @@ dependencies:
 
   # Search DropDown
   dropdown_search: ^5.0.6
+
+  # DateTime Formatter
+  intl: ^0.18.1
+
+  # SVG
   flutter_svg: ^2.0.6
 
 dev_dependencies:
