--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: sotl
 description: SOTL-APP
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+  sdk: ">=2.19.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,13 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  
+
   # Flutter Charts
   fl_chart: ^0.61.0
 
   # Bottom Nav Bar
   sliding_clipped_nav_bar: ^3.1.0+4
-  
+
   # HTTP
   http: ^0.13.5
 
@@ -59,8 +59,11 @@ dependencies:
   # SVG
   flutter_svg: ^2.0.6
 
-  # syncfusion_sliders 
+  # syncfusion_sliders
   syncfusion_flutter_sliders: ^22.2.8
+
+  # URL Launcher
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -87,7 +90,6 @@ flutter_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
